2020 catalog updates, part 4

--- a/assets/vid/vids.html
+++ b/assets/vid/vids.html
@@ -197,13 +197,10 @@
   <iframe width="854" height="480" src="https://www.youtube.com/embed/I5LuBfN6Q3Q" frameborder="0" allowfullscreen></iframe>
 </div>
 <div id="tr-130-vid">
-  <iframe width="854" height="480" src="https://www.youtube.com/embed/XjbawmpnUkc&autoplay=1" frameborder="0" allowfullscreen></iframe>
-</div>
-<div id="tr-130-demo-vid">
-  <iframe width="854" height="480" src="https://www.youtube.com/embed/OUiqrv8elCA&autoplay=1" frameborder="0" allowfullscreen></iframe>
+  <iframe width="854" height="480" src="https://www.youtube.com/embed/OUiqrv8elCA?rel=0&autoplay=1" frameborder="0" allowfullscreen></iframe>
 </div>
 <div id="tr-130-maint-vid">
-  <iframe width="854" height="480" src="https://www.youtube.com/embed/XjbawmpnUkc&autoplay=1" frameborder="0" allowfullscreen></iframe>
+  <iframe width="854" height="480" src="https://www.youtube.com/embed/XjbawmpnUkc?rel=0&autoplay=1" frameborder="0" allowfullscreen></iframe>
 </div>
 
 <!-- Sewer -->
