--- a/manuals.html
+++ b/manuals.html
@@ -62,7 +62,7 @@ permalink: /manuals
                 <td>AUTOBOX ABX-2L-B<br>Automated system for dual flex lancing of exchanger tube IDs</td>
                 <td class="text-center"><a href="/assets/pdf/manuals/ABX-2L-B_manual.pdf" target="_blank" class="btn btn-sm">PL 673</a><br><small class="grey">Updated: 11/2019</small></td>
                 <td class="text-center"></td>
-                <td class="text-center"></td>
+                <td class="text-center"><a href="/assets/pdf/tool-talks/ABX-2L_tool_talk.pdf" target="_blank" class="btn btn-sm">Tool Talk</a><br><small class="grey">Updated: 12/2019</small></td>
                 <td class="text-center"></td>
               </tr>
               <tr>
@@ -250,11 +250,11 @@ permalink: /manuals
                 <td class="text-center"></td>
               </tr>
               <tr>
-                <td><a href="/rigid-lance-machine">BRLM-500</a></td>
+                <td><a href="/rigid-lance-machine">BRLM</a></td>
                 <td>RIGID LANCE MACHINE<br>Rigid lancing system for exchanger tube cleaning</td>
                 <td class="text-center"><a href="/assets/pdf/manuals/LP-300_Manual.pdf" target="_blank" class="btn btn-sm">PL 665</a><br><small class="grey">Updated: 07/2019</small></td>
                 <td class="text-center"></td>
-                <td class="text-center"><a href="/assets/pdf/tool-talks/BRLM_tool_talk.pdf" target="_blank" class="btn btn-sm">Tool Talk</a><br><small class="grey">Updated: 10/2018</small></td>
+                <td class="text-center"><a href="/assets/pdf/tool-talks/BRLM_tool_talk.pdf" target="_blank" class="btn btn-sm">Tool Talk</a><br><small class="grey">Updated: 12/2019</small></td>
                 <td class="text-center"><a href="/assets/pdf/reference/Lancing_System_Assembly_Instructions.pdf" target="_blank" class="btn btn-sm">Guide</a></td>
               </tr>
               <tr>
@@ -332,7 +332,7 @@ permalink: /manuals
               <tr>
                 <td><a href="/hose-containment">HCS-3L</a></td>
                 <td>HOSE CONTAINMENT SYSTEM<br>For AutoBox ABX-3L &nbsp; ABX-3L</td>
-                <td class="text-center"><a href="/assets/pdf/manuals/HCS-3L_Manual.pdf" target="_blank" class="btn btn-sm">PL 615</a><br><small class="grey">Updated: 08/2019</small></td>
+                <td class="text-center"><a href="/assets/pdf/manuals/HCS-3L_Manual.pdf" target="_blank" class="btn btn-sm">PL 658</a><br><small class="grey">Updated: 08/2019</small></td>
                 <td class="text-center"><a href="/assets/pdf/data-sheets/HCS_data_sheet.pdf" target="_blank" class="btn btn-sm">Brochure</a></td>
                 <td class="text-center"><a href="/assets/pdf/tool-talks/HCS_tool_talk.pdf" target="_blank" class="btn btn-sm">Tool Talk</a><br><small class="grey">Updated: 03/2018</small></td>
                 <td class="text-center"></td>
@@ -340,7 +340,7 @@ permalink: /manuals
               <tr>
                 <td><a href="/hose-containment">HCS-PRO</a></td>
                 <td>HOSE CONTAINMENT SYSTEM<br>For AutoBox ABX-PRO</td>
-                <td class="text-center"><a href="/assets/pdf/manuals/HCS-PRO_Manual.pdf" target="_blank" class="btn btn-sm">PL 658</a><br><small class="grey">Updated: 05/2019</small></td>
+                <td class="text-center"><a href="/assets/pdf/manuals/HCS-PRO_Manual.pdf" target="_blank" class="btn btn-sm">PL 661</a><br><small class="grey">Updated: 08/2019</small></td>
                 <td class="text-center"><a href="/assets/pdf/data-sheets/HCS_data_sheet.pdf" target="_blank" class="btn btn-sm">Brochure</a></td>
                 <td class="text-center"><a href="/assets/pdf/tool-talks/HCS_tool_talk.pdf" target="_blank" class="btn btn-sm">Tool Talk</a><br><small class="grey">Updated: 08/2019</small></td>
                 <td class="text-center"></td>
@@ -526,6 +526,14 @@ permalink: /manuals
                 <td><a href="/striker">SKRL-100</a></td>
                 <td>LIGHTWEIGHT STRIKER<br>Remote shotgunning system </td>
                 <td class="text-center"><a href="/assets/pdf/manuals/SKRL_manual.pdf" target="_blank" class="btn btn-sm">PL 605</a><br><small class="grey">Updated: 10/2019</small></td>
+                <td class="text-center"></td>
+                <td class="text-center"><a href="/assets/pdf/tool-talks/striker_skrl_tool_talk.pdf" target="_blank" class="btn btn-sm">Tool Talk</a><br><small class="grey">Updated: 06/2017</small></td>
+                <td class="text-center"></td>
+              </tr>
+              <tr>
+                <td><a href="/striker">SKRL Swivel</a></td>
+                <td>SKRL-P4, SKRL-MP9<br>Remote shotgunning tool for SKRL-100</td>
+                <td class="text-center"><a href="/assets/pdf/manuals/SKRL_Swivel_manual.pdf" target="_blank" class="btn btn-sm">PL 633</a><br><small class="grey">Updated: 01/2020</small></td>
                 <td class="text-center"></td>
                 <td class="text-center"><a href="/assets/pdf/tool-talks/striker_skrl_tool_talk.pdf" target="_blank" class="btn btn-sm">Tool Talk</a><br><small class="grey">Updated: 06/2017</small></td>
                 <td class="text-center"></td>
