--- a/rotary-waterblast-tools/bjv-pipe-cleaning.html
+++ b/rotary-waterblast-tools/bjv-pipe-cleaning.html
@@ -607,7 +607,7 @@ master-slider: yes
                   <div class="panel-heading" role="tab" id="heading4">
                     <h4 class="panel-title">
                       <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapse4" aria-expanded="false" aria-controls="collapse4">
-                        <strong>BA 600-P12-F</strong> Service Kit for BJV-P12 - Fast Rotation<i class="indicator fa fa-caret-down pull-right" aria-hidden="true"></i>
+                        <strong>BJ 600-P12-F</strong> Service Kit for BJV-P12 - Fast Rotation<i class="indicator fa fa-caret-down pull-right" aria-hidden="true"></i>
                       </a>
                     </h4>
                   </div>
