--- a/waterblast-automation/rigid-lance-machine.html
+++ b/waterblast-automation/rigid-lance-machine.html
@@ -70,7 +70,6 @@ master-slider: yes
         <li>Operator is removed up to 25 ft (7.6m) away from the splash back area for increased safety</li>
         <li>Dual coil springs increase safety and stability of guide block</li>
         <li>Swivel wheels, jack stands, and rear supports provide extra stability and support in key points of the system</li>
-        <li>Air or hydraulic powered</li>
       </ul>
 
       <a href="/contact.html" class="btn btn-lg btn-block contact" role="button" style="margin-top:30px;">Contact Us for Quote</a>
@@ -96,49 +95,55 @@ master-slider: yes
 
       <!-- Specifications -->
       <section id="section-bar-1">
-        <div class="col-sm-5">
+        <div class="col-sm-6">
           <!-- Nav tabs -->
           <ul class="nav nav-tabs" role="tablist">
-            <li role="presentation" class="active"><a href="#15k" aria-controls="15k" role="tab" data-toggle="tab">15k</a></li>
-            <li role="presentation"><a href="#22k" aria-controls="22k" role="tab" data-toggle="tab">22k</a></li>
-            <li role="presentation"><a href="#40k" aria-controls="40k" role="tab" data-toggle="tab">40k</a></li>
+            <li role="presentation" class="active"><a href="#D-22k" aria-controls="D-22k" role="tab" data-toggle="tab">DUAL 22k</a></li>
+            <li role="presentation"><a href="#D-40k" aria-controls="D-40k" role="tab" data-toggle="tab">DUAL 40k</a></li>
+            <li role="presentation"><a href="#T-22k" aria-controls="T-22k" role="tab" data-toggle="tab">TRIPLE 22k</a></li>
+            <li role="presentation"><a href="#T-40k" aria-controls="T-40k" role="tab" data-toggle="tab">TRIPLE 40k</a></li>
           </ul>
           <!-- Tab panes -->
           <div class="tab-content">
-            <!-- 15k -->
-            <div role="tabpanel" class="tab-pane active" id="15k">
+            <!-- DUAL 22k -->     
+            <div role="tabpanel" class="tab-pane active" id="D-22k">
               <table class="table specs table-hover">
               <tbody>
                 <tr>
                   <th>Tool Model</th>
-                  <td colspan="2">BRLM-500</td>
+                  <td colspan="2">BRLM 351</td>
                 </tr>
                 <tr>
-                  <th>Pressure Range</th>
-                  <td>2–15k psi</td>
-                  <td><span class="metric">140–1000 bar</span></td>
+                  <th>Maximum Pressure</th>
+                  <td>22k psi</td>
+                  <td><span class="metric">1500 bar</span></td>
                 </tr>
                 <tr>
                   <th>Maximum Flow</th>
-                  <td>50 gpm</td>
-                  <td><span class="metric">190 l/min</span></td>
-                </tr>
-                <tr>
-                  <th>Flow Coefficient</th>
-                  <td colspan="2">2.3 Cv</td>
+                  <td>60 gpm</td>
+                  <td><span class="metric">227 l/min</span></td>
                 </tr>
                 <tr>
                   <th>Inlet Connection</th>
-                  <td colspan="2">1/2 NPT (P8)</td>
+                  <td colspan="2">3/4" MP </td>
                 </tr>
                 <tr>
                   <th>Lance Connection</th>
-                  <td colspan="2">1/8, 1/4 NPT</td>
+                  <td colspan="2">1/8" or 1/4" NPT, 3/8" or 9/16" MP</td>
                 </tr>
                 <tr>
                   <th>Stroke Length</th>
                   <td>Up to 60 ft</td>
                   <td><span class="metric">18 m</span></td>
+                </tr>
+                <tr>
+                  <th>Feed Rate</th>
+                  <td>0.3-1.2 ft/s</td>
+                  <td><span class="metric">0.1-0.37 m/min</span></td>
+                </tr>
+                <tr>
+                  <th>Rotation Speed</th>
+                  <td colspan="2">125-620 rpm</td>
                 </tr>
                 <tr>
                   <th>Weight, Complete</th>
@@ -148,40 +153,45 @@ master-slider: yes
               </tbody>
               </table>
             </div>
-            <!-- 22k -->     
-            <div role="tabpanel" class="tab-pane" id="22k">
+            <!-- DUAL 40k -->     
+            <div role="tabpanel" class="tab-pane" id="D-40k">
               <table class="table specs table-hover">
               <tbody>
                 <tr>
                   <th>Tool Model</th>
-                  <td colspan="2">BRLM-500</td>
+                  <td colspan="2">BRLM 361</td>
                 </tr>
                 <tr>
-                  <th>Pressure Range</th>
-                  <td>15–22k psi</td>
-                  <td><span class="metric">1000–1500 bar</span></td>
+                  <th>Maximum Pressure</th>
+                  <td>40k psi</td>
+                  <td><span class="metric">2800 bar</span></td>
                 </tr>
                 <tr>
                   <th>Maximum Flow</th>
-                  <td>50 gpm</td>
-                  <td><span class="metric">190 l/min</span></td>
-                </tr>
-                <tr>
-                  <th>Flow Coefficient</th>
-                  <td colspan="2">2.0 Cv</td>
+                  <td>60 gpm</td>
+                  <td><span class="metric">227 l/min</span></td>
                 </tr>
                 <tr>
                   <th>Inlet Connection</th>
-                  <td colspan="2">3/4 MP (MP12)</td>
+                  <td colspan="2">9/16" HP</td>
                 </tr>
                 <tr>
                   <th>Lance Connection</th>
-                  <td colspan="2">3/8, 9/16 LH</td>
+                  <td colspan="2">3/8" or 9/16" HP</td>
                 </tr>
                 <tr>
                   <th>Stroke Length</th>
                   <td>Up to 60 ft</td>
                   <td><span class="metric">18 m</span></td>
+                </tr>
+                <tr>
+                  <th>Feed Rate</th>
+                  <td>0.3-1.2 ft/s</td>
+                  <td><span class="metric">0.1-0.37 m/min</span></td>
+                </tr>
+                <tr>
+                  <th>Rotation Speed</th>
+                  <td colspan="2">125-620 rpm</td>
                 </tr>
                 <tr>
                   <th>Weight, Complete</th>
@@ -191,40 +201,93 @@ master-slider: yes
               </tbody>
               </table>
             </div>
-            <!-- 40k -->     
-            <div role="tabpanel" class="tab-pane" id="40k">
+            <!-- TRIPLE 22k -->     
+            <div role="tabpanel" class="tab-pane" id="T-22k">
               <table class="table specs table-hover">
               <tbody>
                 <tr>
                   <th>Tool Model</th>
-                  <td colspan="2">BRLM-500</td>
+                  <td colspan="2">BRLM 353-CS</td>
                 </tr>
                 <tr>
-                  <th>Pressure Range</th>
-                  <td>22–40k psi</td>
-                  <td><span class="metric">1500–2800 bar</span></td>
+                  <th>Maximum Pressure</th>
+                  <td>22k psi</td>
+                  <td><span class="metric">1500 bar</span></td>
                 </tr>
                 <tr>
                   <th>Maximum Flow</th>
-                  <td>20 gpm</td>
-                  <td><span class="metric">76 l/min</span></td>
-                </tr>
-                <tr>
-                  <th>Flow Coefficient</th>
-                  <td colspan="2">0.3 Cv (UHS), 0.5 Cv (UH)</td>
+                  <td>60 gpm</td>
+                  <td><span class="metric">227 l/min</span></td>
                 </tr>
                 <tr>
                   <th>Inlet Connection</th>
-                  <td colspan="2">9/16 HP (H9)</td>
+                  <td colspan="2">3/4" MP</td>
                 </tr>
                 <tr>
                   <th>Lance Connection</th>
-                  <td colspan="2">3/8, 9/16 LH</td>
+                  <td colspan="2">1/8" or 1/4" NPT, 3/8" or 9/16" MP</td>
                 </tr>
                 <tr>
                   <th>Stroke Length</th>
                   <td>Up to 60 ft</td>
                   <td><span class="metric">18 m</span></td>
+                </tr>
+                <tr>
+                  <th>Feed Rate</th>
+                  <td>0.3-1.2 ft/s</td>
+                  <td><span class="metric">0.1-0.37 m/min</span></td>
+                </tr>
+                <tr>
+                  <th>Rotation Speed</th>
+                  <td colspan="2">125-620 rpm</td>
+                </tr>
+                <tr>
+                  <th>Weight, Complete</th>
+                  <td>1200-1500 lb</td>
+                  <td><span class="metric">544–680 kg</span></td>
+                </tr>
+              </tbody>
+              </table>
+            </div>
+            <!-- TRIPLE 40k -->     
+            <div role="tabpanel" class="tab-pane" id="T-40k">
+              <table class="table specs table-hover">
+              <tbody>
+                <tr>
+                  <th>Tool Model</th>
+                  <td colspan="2">BRLM 363-CS</td>
+                </tr>
+                <tr>
+                  <th>Maximum Pressure</th>
+                  <td>40k psi</td>
+                  <td><span class="metric">2800 bar</span></td>
+                </tr>
+                <tr>
+                  <th>Maximum Flow</th>
+                  <td>60 gpm</td>
+                  <td><span class="metric">227 l/min</span></td>
+                </tr>
+                <tr>
+                  <th>Inlet Connection</th>
+                  <td colspan="2">9/16" HP</td>
+                </tr>
+                <tr>
+                  <th>Lance Connection</th>
+                  <td colspan="2">3/8" or 9/16" HP</td>
+                </tr>
+                <tr>
+                  <th>Stroke Length</th>
+                  <td>Up to 60 ft</td>
+                  <td><span class="metric">18 m</span></td>
+                </tr>
+                <tr>
+                  <th>Feed Rate</th>
+                  <td>0.3-1.2 ft/s</td>
+                  <td><span class="metric">0.1-0.37 m/min</span></td>
+                </tr>
+                <tr>
+                  <th>Rotation Speed</th>
+                  <td colspan="2">125-620 rpm</td>
                 </tr>
                 <tr>
                   <th>Weight, Complete</th>
@@ -236,15 +299,11 @@ master-slider: yes
             </div>
           </div>
         </div>
-        <aside class="col-sm-3 col-sm-offset-4 aside-box">
-          <h3>Package includes:</h3>
-            <ul class="list-unstyled">
-              <li>Appropriate length of drive rail</li>
-              <li>Rotary package to drive up to 3 lances</li>
-              <li>Lance positioner and appropriate support options</li>
-              <li>Guide blocks</li>
-              <li>Control box</li>
-            </ul>
+        
+        <aside class="col-sm-3 col-sm-offset-3 aside-box">
+          <h3>Need Support?</h3>
+          <p>Our expert staff is available Monday through Friday 8AM - 5PM MST to answer questions and offer advice on your toughest cleaning applications.</p>
+          <h4 class="slab">Phone: +1 970 259-2869<br>US Toll Free: (866) 795-1586</h4>
         </aside>
       </section>
       
@@ -279,7 +338,7 @@ master-slider: yes
         <div class="col-sm-4">
           <ul class="list-unstyled basic">
             <h3>Documentation</h3>
-            <li><a href="/assets/pdf/tool-talks/BRLM_tool_talk.pdf">BRLM Tool Talk</a></li>
+            <li><a href="/assets/pdf/tool-talks/BRLM_tool_talk.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;BRLM Tool Talk</a></li>
             <li><a href="/assets/pdf/reference/Lancing_System_Assembly_Instructions.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Assembly Instructions</a></li>
           </ul>
         </div>
