--- a/waterblast-automation/torus-tr-130.html
+++ b/waterblast-automation/torus-tr-130.html
@@ -205,37 +205,24 @@ master-slider: yes
       <section id="section-bar-3">
         <div class="row row-centered">
           <div class="col-sm-4 col-centered">
-            <!-- Lightbox call - WORKING TEST -->
-            <div>
-              <a href="#" data-featherlight="#tr-130-demo-vid">
-                <img src="/assets/vid/thumb/tr-130-demo-vid.png" alt="TR-130 Demo Video" class="img-responsive" />
-              </a>
-            </div>
-            <!-- End Lightbox call -->
-            <p class="caption">Torus TR-130 Demo Video</p>   
-            
-             <iframe class="lightbox" id="tr-130-demo-vid" width="854" height="480" src="https://www.youtube.com/embed/XjbawmpnUkc" frameborder="0" allowfullscreen></iframe>
-            
-          </div>
-          <div class="col-sm-4 col-centered">
             <!-- Lightbox call -->
             <div>
               <a href="#" src="/assets/vid/vids.html" data-featherlight="/assets/vid/vids.html #tr-130-vid">
-                <img src="/assets/vid/thumb/tr-130-vid.png" alt="TR-130 Overview Video" class="img-responsive" />
+                <img src="/assets/vid/thumb/tr-130-demo-vid.png" alt="Torus TR-130 Overview video" class="img-responsive" />
               </a>
             </div>
             <!-- End Lightbox call -->
-            <p class="caption">Torus TR-130 Overview Video</p>            
+            <p class="caption">Torus TR-130 Overview</p>
           </div>
           <div class="col-sm-4 col-centered">
             <!-- Lightbox call -->
             <div>
               <a href="#" src="/assets/vid/vids.html" data-featherlight="/assets/vid/vids.html #tr-130-maint-vid">
-                <img src="/assets/vid/thumb/tr-130-maint-vid.png" alt="TR-130 Maintenance Video" class="img-responsive" />
+                <img src="/assets/vid/thumb/tr-130-maint-vid.png" alt="Torus TR-130 Maintenance video" class="img-responsive" />
               </a>
             </div>
             <!-- End Lightbox call -->
-            <p class="caption">Torus TR-130 Maintenance Video</p>            
+            <p class="caption">Torus TR-130 Maintenance</p>
           </div>
         </div>
       </section> 
