--- a/sewer-tools-nozzles/warthog-wd.html
+++ b/sewer-tools-nozzles/warthog-wd.html
@@ -361,7 +361,7 @@ master-slider: yes
 <section class="product-extra fluid-container bg-lt-grey">
   <div class="container padding-tb-30">
     <div class="col-md-7">
-      <h2>Hight flow cleaning for large lines</h2>
+      <h2>High flow cleaning for large lines</h2>
       <p>The 1-1/4” inlet combined with seven ports effectively distributes more water for tough pipe cleaning applications.</p>
     </div>
     <div class="col-md-4 col-md-offset-1">
