--- a/waterblast-automation/striker-lightweight.html
+++ b/waterblast-automation/striker-lightweight.html
@@ -171,6 +171,7 @@ master-slider: yes
           <ul class="list-unstyled basic">
             <h3>Manuals</h3>
             <li><a href="/assets/pdf/manuals/SKRL_manual.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Lightweight Striker Manual</a></li>
+            <li><a href="/assets/pdf/manuals/SKRL_Swivel_manual.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;SKRL Swivel Manual</a></li>
           </ul>
         </div>
         <div class="col-sm-4">
