misc updates, table filter fix

--- a/manuals.html
+++ b/manuals.html
@@ -40,12 +40,12 @@ permalink: /manuals
             <div class="col-sm-3 pull-right info-table-filter">
               <div class="input-group"> 
                 <span class="input-group-addon">Filter:</span>
-                <input id="filter" type="text" class="form-control">
+                <input type="search" class="light-table-filter form-control" data-table="order-table" placeholder="Type to filter...">                
               </div>
             </div>
           </div>
 
-          <table class="table info-table table-bordered table-condensed table-hover margin-bottom-120" style="background-color:#fff;">
+          <table class="table info-table table-bordered table-condensed table-hover margin-bottom-120 order-table" style="background-color:#fff;">
             <thead>
               <tr>
                 <th>Tool Model</th>
@@ -68,7 +68,7 @@ permalink: /manuals
               <tr>
                 <td><a href="/abx-3l">ABX-3L-V2</a><br></td>
                 <td>AUTOBOX ABX-3L-V2<br>Automated system for triple flex lancing of exchanger tube IDs</td>
-                <td class="text-center"><a href="/assets/pdf/manuals/ABX-3L_manual.pdf" target="_blank" class="btn btn-sm">PL 630</a><br><small class="grey">Updated: 07/2019</small></td>
+                <td class="text-center"><a href="/assets/pdf/manuals/ABX-3L_manual.pdf" target="_blank" class="btn btn-sm">PL 630</a><br><small class="grey">Updated: 02/2020</small></td>
                 <td class="text-center"><a href="/assets/pdf/data-sheets/ABX-3L_data_sheet.pdf" target="_blank" class="btn btn-sm">Brochure</a></td>
                 <td class="text-center"><a href="/assets/pdf/tool-talks/ABX-3L_tool_talk.pdf" target="_blank" class="btn btn-sm">Tool Talk</a><br><small class="grey">Updated: 08/2018</small></td>
                 <td class="text-center"></td>
@@ -252,7 +252,7 @@ permalink: /manuals
               <tr>
                 <td><a href="/rigid-lance-machine">BRLM</a></td>
                 <td>RIGID LANCE MACHINE<br>Rigid lancing system for exchanger tube cleaning</td>
-                <td class="text-center"><a href="/assets/pdf/manuals/LP-300_Manual.pdf" target="_blank" class="btn btn-sm">PL 665</a><br><small class="grey">Updated: 07/2019</small></td>
+                <td class="text-center"><a href="/assets/pdf/manuals/LP-300_Manual.pdf" target="_blank" class="btn btn-sm">PL 665</a><br><small class="grey">Updated: 02/2020</small></td>
                 <td class="text-center"></td>
                 <td class="text-center"><a href="/assets/pdf/tool-talks/BRLM_tool_talk.pdf" target="_blank" class="btn btn-sm">Tool Talk</a><br><small class="grey">Updated: 12/2019</small></td>
                 <td class="text-center"><a href="/assets/pdf/reference/Lancing_System_Assembly_Instructions.pdf" target="_blank" class="btn btn-sm">Guide</a></td>
@@ -517,7 +517,7 @@ permalink: /manuals
               <tr>
                 <td><a href="/striker">SKR-STD</a></td>
                 <td>STRIKER<br>Remote shotgunning system </td>
-                <td class="text-center"><a href="/assets/pdf/manuals/SKR_manual.pdf" target="_blank" class="btn btn-sm">PL 605</a><br><small class="grey">Updated: 10/2019</small></td>
+                <td class="text-center"><a href="/assets/pdf/manuals/SKR_manual.pdf" target="_blank" class="btn btn-sm">PL 605</a><br><small class="grey">Updated: 02/2020</small></td>
                 <td class="text-center"><a href="/assets/pdf/data-sheets/SKR_data_sheet.pdf" target="_blank" class="btn btn-sm">Brochure</a></td>
                 <td class="text-center"><a href="/assets/pdf/tool-talks/SKR_tool_talk.pdf" target="_blank" class="btn btn-sm">Tool Talk</a><br><small class="grey">Updated: 10/2016</small></td>
                 <td class="text-center"></td>
@@ -557,7 +557,7 @@ permalink: /manuals
               <tr>
                 <td><a href="/tr-130">TR-130</a></td>
                 <td>TORUS<br>3D Tank/vessel cleaning - Fastener assembly guide available</td>
-                <td class="text-center"><a href="/assets/pdf/manuals/Torus_Manual.pdf" target="_blank" class="btn btn-sm">PL 556</a><br><small class="grey">Updated: 07/2019</small></td>
+                <td class="text-center"><a href="/assets/pdf/manuals/Torus_Manual.pdf" target="_blank" class="btn btn-sm">PL 556</a><br><small class="grey">Updated: 2/2020</small></td>
                 <td class="text-center"><a href="/assets/pdf/data-sheets/TR-130_data-sheet.pdf" target="_blank" class="btn btn-sm">Brochure</a></td>
                 <td class="text-center"><a href="/assets/pdf/tool-talks/TR-130_tool_talk.pdf" target="_blank" class="btn btn-sm">Tool Talk</a><br><small class="grey">Updated: 08/2017</small></td>
                 <td class="text-center"><a href="/assets/pdf/manuals/TR-130_Fastener_Assembly_Instructions.pdf" target="_blank" class="btn btn-sm">Guide</a></td>
@@ -565,7 +565,7 @@ permalink: /manuals
               <tr>
                 <td><a href="/tr-200">TR-200</a></td>
                 <td>TORUS<br>High flow 3D Tank/vessel cleaning - Fastener assembly guide available</td>
-                <td class="text-center"><a href="/assets/pdf/manuals/Torus_Manual.pdf" target="_blank" class="btn btn-sm">PL 556</a><br><small class="grey">Updated: 07/2019</small></td>
+                <td class="text-center"><a href="/assets/pdf/manuals/Torus_Manual.pdf" target="_blank" class="btn btn-sm">PL 556</a><br><small class="grey">Updated: 02/2020</small></td>
                 <td class="text-center"><a href="/assets/pdf/data-sheets/TR-200_data-sheet.pdf" target="_blank" class="btn btn-sm">Brochure</a></td>
                 <td class="text-center"><a href="/assets/pdf/tool-talks/TR-200_tool_talk.pdf" target="_blank" class="btn btn-sm">Tool Talk</a><br><small class="grey">Updated: 02/2017</small></td>
                 <td class="text-center"><a href="/assets/pdf/manuals/TR-200_Fastener_Assembly_Instructions.pdf" target="_blank" class="btn btn-sm">Guide</a></td>
@@ -708,12 +708,12 @@ permalink: /manuals
             <div class="col-sm-3 pull-right info-table-filter">
               <div class="input-group"> 
                 <span class="input-group-addon">Filter:</span>
-                <input id="filter-2" type="text" class="form-control">
+                <input type="search" class="light-table-filter form-control" data-table="order-table" placeholder="Type to filter...">        
               </div>
             </div>
           </div>
 
-          <table class="table info-table table-bordered table-condensed table-hover margin-bottom-120" style="background-color:#fff;">
+          <table class="table info-table table-bordered table-condensed table-hover margin-bottom-120 order-table" style="background-color:#fff;">
             <thead>
               <tr>
                 <th>Tool Model</th>
