--- a/safety-data-sheets.html
+++ b/safety-data-sheets.html
@@ -22,11 +22,11 @@ permalink: /sds
     <div class="col-sm-3 pull-right info-table-filter">
       <div class="input-group"> 
         <span class="input-group-addon">Filter:</span>
-        <input id="filter" type="text" class="form-control">
+        <input type="search" class="light-table-filter form-control" data-table="order-table" placeholder="Type to filter...">
       </div>
     </div>
   </div>
-  <table class="table info-table table-striped table-bordered table-condensed">
+  <table class="table info-table table-striped table-bordered table-condensed order-table">
     <thead>
       <tr>
         <th>StoneAge Part Number</th>
