--- a/sewer-tools.html
+++ b/sewer-tools.html
@@ -154,11 +154,11 @@ landing: yes
     <div class="col-sm-3 pull-left info-table-filter">
       <div class="input-group"> 
         <span class="input-group-addon">Filter:</span>
-        <input id="filter" type="text" class="form-control">
+        <input type="search" class="light-table-filter form-control" data-table="order-table" placeholder="Type to filter...">
       </div>
     </div>
   </div>
-  <table class="table info-table table-hover table-bordered table-condensed">
+  <table class="table info-table table-hover table-bordered table-condensed order-table">
     <thead>
       <tr>
         <td colspan="7" style="background: #444; color: #eee;"><h2 style="font-weight: 800; padding-left: 20px;">Magnum Series</h2></td>
@@ -200,7 +200,7 @@ landing: yes
     </tbody>
   </table>
   
-  <table class="table info-table table-hover table-bordered table-condensed">
+  <table class="table info-table table-hover table-bordered table-condensed order-table">
     <thead>
       <tr>
         <td colspan="7" style="background: #444; color: #eee;"><h2 style="font-weight: 800; padding-left: 20px;">Switcher Series</h2></td>
@@ -250,7 +250,7 @@ landing: yes
     </tbody>
   </table>
   
-  <table class="table info-table table-hover table-bordered table-condensed">
+  <table class="table info-table table-hover table-bordered table-condensed order-table">
     <thead>
       <tr>
         <td colspan="7" style="background: #444; color: #eee;"><h2 style="font-weight: 800; padding-left: 20px;">Classic Series</h2></td>
@@ -340,7 +340,7 @@ landing: yes
     </tbody>
   </table>
   
-  <table class="table info-table table-hover table-bordered table-condensed hx">
+  <table class="table info-table table-hover table-bordered table-condensed hx order-table">
     <thead>
       <tr>
         <td colspan="7" style="background: #444; color: #eee;"><h2 style="font-weight: 800; padding-left: 20px;">Hydro Excavation</h2></td>
@@ -364,7 +364,7 @@ landing: yes
     </tbody>
   </table>
   
-  <table class="table info-table table-hover table-bordered table-condensed accessories">
+  <table class="table info-table table-hover table-bordered table-condensed accessories order-table">
     <thead>
       <tr>
         <td colspan="7" style="background: #444; color: #eee;"><h2 style="font-weight: 800; padding-left: 20px;">Accessories</h2></td>
