--- a/stoneage-patents.html
+++ b/stoneage-patents.html
@@ -16,11 +16,11 @@ permalink: /patents
     <div class="col-sm-3 pull-right info-table-filter">
       <div class="input-group"> 
         <span class="input-group-addon">Filter:</span>
-        <input id="filter" type="text" class="form-control">
+        <input type="search" class="light-table-filter form-control" data-table="order-table" placeholder="Type to filter...">
       </div>
     </div>
   </div>
-  <table class="table info-table table-striped table-bordered table-condensed">
+  <table class="table info-table table-striped table-bordered table-condensed order-table">
     <thead>
       <tr>
         <th style="width:20%;">StoneAge Name</th>
